2004/01/25 03:44 (-0500) muppetman

	* Glib.pm, README: unstable release 1.031

	* NEWS, MANIFEST.SKIP: updated

2004/01/25 01:00 (-0500) muppetman

	A NEWS
	M MANIFEST
	  add a file to summarize changes
	
	* GObject.xs: add freeze_notify and thaw_notify.

	* GenPod.pm: add gshort and gushort to %basic_types, and FIXME
	notice on %basic_types to remind me that it needs to be extensible.
	remove the gchar=>integer mapping, since it conflicts with
	gchar=>string (the * is implied, you see)

	* Glib.pm: add exportable constants under a 'constants' tag.

2004/01/24 21:44 (-0500) rwmcfa1

	* MakeHelper.pm: added dist-srpms target, removed doc refering to 
	runtime_reqs as it has been replaced by the pkg-config trick

	* Makefile.PL: removed runtime_reqs stuff, replaced by the pkg-config 
	trick
	
	* perl-Glib.spec.in: use pkg-config for Requires version

2004/01/22 09:44 (-0500) rwmcfa1

	* MakeHelper.pm: and i thought i was done. don't know what i was 
	thinking with the last one, laying in bed sleepless last night the 
	problem came to me. this is another attempt at a solution. this one 
	will work, but depends on makefile conditionals which may not be as 
	portable as i would like. also a fix to prevent the mkdir change from 
	a while ago from happening everytime make is done.

2004/01/21 20:56 (-0500) rwmcfa1

	* MakeHelper.pm: yet another attempt at completely clearing up the 
	issues with the -jx make option and not having the doc rebuild at every
	single make invocation. uses blib_done file, which depends on all of
	the @xs_files. hopefully this will do it, i'm about out of ideas. 
	bascially MakeMaker sucks if you're tyring to do stuff this complicated
	with it. with plain old make this wouldn't be an issue at all, but 
	with the hooks we're given this is not going to be easy.

2004/01/21 15:14 (-0500) muppetman

	* ParseXSDoc.pm: allow space padding on either side of the arguments
	in the xsub declaration.  also make the error messages more 