@@ -1,3 +1,10 @@
+2004/01/27 10:44 (-0500) rwmcfa1
+
+	* MakeHelper.pm: provide a mechinism for over-ridding the global 
+	variables in GenPod.
+
+	* GenPod.pm: doc how to go about over-ridding the global vars.
+
 2004/01/25 03:44 (-0500) muppetman
 
 	* Glib.pm, README: unstable release 1.031
